--- a/TrafficSignRecognition/TrafficSignRecognition/TrafficSignRecognition.csproj
+++ b/TrafficSignRecognition/TrafficSignRecognition/TrafficSignRecognition.csproj
@@ -88,7 +88,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CV\EmguHelper.cs" />
+    <Compile Include="CV\SignDetectionHelper.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
