--- a/CV_Astu/CV_Astu.vcxproj.filters
+++ b/CV_Astu/CV_Astu.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="pyramid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="octave.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cvimage.h">
@@ -101,6 +104,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pyramid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="octave.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
