--- a/build-CV_Astu-Desktop_Qt_5_8_0_MSVC2015_64bit-Debug/Makefile.Release
+++ b/build-CV_Astu-Desktop_Qt_5_8_0_MSVC2015_64bit-Debug/Makefile.Release
@@ -564,10 +564,10 @@ release\mainwindow.obj: ..\CV_Astu\mainwindow.cpp C:\Qt\5.8\msvc2015_64\include\
 		../CV_Astu/doublemat.h \
 		../CV_Astu/kernelbuilder.h \
 		../CV_Astu/imagehelper.h \
+		../CV_Astu/interestingpointsdetector.h \
 		../CV_Astu/pyramid.h \
 		..\CV_Astu\Octave.h \
 		../CV_Astu/OctaveLayer.h \
-		../CV_Astu/interestingpointsdetector.h \
 		../CV_Astu/descriptorsbuilder.h
 
 release\cvimage.obj: ..\CV_Astu\cvimage.cpp ../CV_Astu/cvimage.h \
@@ -659,7 +659,21 @@ release\pyramid.obj: ..\CV_Astu\pyramid.cpp ../CV_Astu/pyramid.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qcontainerfwd.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qobject_impl.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qline.h \
-		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainterpath.h
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainterpath.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\QPainter \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainter.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpixmap.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qshareddata.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qhash.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer_impl.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtextoption.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpen.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qbrush.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfont.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontmetrics.h \
+		../CV_Astu/interestingpointsdetector.h
 
 release\octave.obj: ..\CV_Astu\octave.cpp ../CV_Astu/octave.h \
 		../CV_Astu/OctaveLayer.h \
@@ -737,17 +751,126 @@ release\octave.obj: ..\CV_Astu\octave.cpp ../CV_Astu/octave.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qobject_impl.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qline.h \
 		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainterpath.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\QPainter \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainter.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpixmap.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qshareddata.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qhash.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer_impl.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtextoption.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpen.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qbrush.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfont.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontmetrics.h \
 		../CV_Astu/cvimage.h \
-		../CV_Astu/kernelbuilder.h
+		../CV_Astu/kernelbuilder.h \
+		../CV_Astu/interestingpointsdetector.h \
+		../CV_Astu/pyramid.h \
+		..\CV_Astu\Octave.h
 
 release\interestingpointsdetector.obj: ..\CV_Astu\interestingpointsdetector.cpp ../CV_Astu/interestingpointsdetector.h \
 		../CV_Astu/doublemat.h \
-		../CV_Astu/kernelbuilder.h
+		../CV_Astu/kernelbuilder.h \
+		../CV_Astu/pyramid.h \
+		../CV_Astu/cvimage.h \
+		..\CV_Astu\Octave.h \
+		../CV_Astu/OctaveLayer.h \
+		../CV_Astu/imagehelper.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\QImage \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qimage.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtguiglobal.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qglobal.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qconfig-bootstrapped.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qconfig.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qtcore-config.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsystemdetection.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qprocessordetection.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qcompilerdetection.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qtypeinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsysinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qlogging.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qflags.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qtypetraits.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qatomic.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qbasicatomic.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qatomic_bootstrap.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qgenericatomic.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qatomic_cxx11.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qatomic_msvc.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qglobalstatic.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qmutex.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qnumeric.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qversiontagging.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtgui-config.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qcolor.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qrgb.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qnamespace.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qstringlist.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qlist.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qalgorithms.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qiterator.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qrefcount.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qarraydata.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qhashfunctions.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qchar.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qpair.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qbytearraylist.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qbytearray.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qstring.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qstringbuilder.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qregexp.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qstringmatcher.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qrgba64.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpaintdevice.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qwindowdefs.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qobjectdefs.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qobjectdefs_impl.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qwindowdefs_win.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qrect.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qmargins.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsize.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qpoint.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpixelformat.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtransform.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qmatrix.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpolygon.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qvector.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qregion.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qdatastream.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qscopedpointer.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qiodevice.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qobject.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qcoreevent.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qmetatype.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qvarlengtharray.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qcontainerfwd.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qobject_impl.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qline.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainterpath.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\QPainter \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainter.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpixmap.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qshareddata.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qhash.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer_impl.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtextoption.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpen.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qbrush.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfont.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontmetrics.h
 
 release\descriptorsbuilder.obj: ..\CV_Astu\descriptorsbuilder.cpp ../CV_Astu/descriptorsbuilder.h \
 		../CV_Astu/interestingpointsdetector.h \
 		../CV_Astu/doublemat.h \
 		../CV_Astu/kernelbuilder.h \
+		../CV_Astu/pyramid.h \
+		../CV_Astu/cvimage.h \
+		..\CV_Astu\Octave.h \
+		../CV_Astu/OctaveLayer.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\QTextStream \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qtextstream.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qiodevice.h \
@@ -832,7 +955,15 @@ release\descriptorsbuilder.obj: ..\CV_Astu\descriptorsbuilder.cpp ../CV_Astu/des
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qdatastream.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qline.h \
 		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainterpath.h \
-		../CV_Astu/cvimage.h
+		C:\Qt\5.8\msvc2015_64\include\QtGui\QPainter \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainter.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpixmap.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtextoption.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpen.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qbrush.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfont.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontmetrics.h
 
 release\imagehelper.obj: ..\CV_Astu\imagehelper.cpp ../CV_Astu/imagehelper.h \
 		C:\Qt\5.8\msvc2015_64\include\QtGui\QImage \
@@ -906,9 +1037,26 @@ release\imagehelper.obj: ..\CV_Astu\imagehelper.cpp ../CV_Astu/imagehelper.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qobject_impl.h \
 		C:\Qt\5.8\msvc2015_64\include\QtCore\qline.h \
 		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainterpath.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\QPainter \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpainter.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpixmap.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qshareddata.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qhash.h \
+		C:\Qt\5.8\msvc2015_64\include\QtCore\qsharedpointer_impl.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qtextoption.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qpen.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qbrush.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontinfo.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfont.h \
+		C:\Qt\5.8\msvc2015_64\include\QtGui\qfontmetrics.h \
 		../CV_Astu/cvimage.h \
 		../CV_Astu/doublemat.h \
-		../CV_Astu/kernelbuilder.h
+		../CV_Astu/kernelbuilder.h \
+		../CV_Astu/interestingpointsdetector.h \
+		../CV_Astu/pyramid.h \
+		..\CV_Astu\Octave.h \
+		../CV_Astu/OctaveLayer.h
 
 release\moc_mainwindow.obj: release\moc_mainwindow.cpp 
 
