--- a/DS/FourierTransform/FourierTransform/FourierTransform.csproj
+++ b/DS/FourierTransform/FourierTransform/FourierTransform.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApproxForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ApproxForm.Designer.cs">
+      <DependentUpon>ApproxForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Fourier\FourierTransformer.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -57,6 +63,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalRepresentation\SignalConverter.cs" />
+    <EmbeddedResource Include="ApproxForm.resx">
+      <DependentUpon>ApproxForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
