--- a/AndroidPriceChecker/AndroidPriceChecker/AndroidPriceChecker.csproj
+++ b/AndroidPriceChecker/AndroidPriceChecker/AndroidPriceChecker.csproj
@@ -87,7 +87,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CatalogueActivity.cs" />
+    <Compile Include="ProductList.cs" />
     <Compile Include="Data\ProductDB.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Data\Product.cs" />
@@ -100,6 +100,9 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\ProductList.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
