--- a/AndroidPriceChecker/AndroidPriceChecker/packages.config
+++ b/AndroidPriceChecker/AndroidPriceChecker/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid60" />
-  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="ZXing.Net.Mobile" version="2.3.2" targetFramework="monoandroid60" />
+  <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid71" />
+  <package id="ZXing.Net.Mobile" version="2.3.2" targetFramework="monoandroid71" />
 </packages>
